# local-mind

./: CHANGELOG.md  README.md  components.d.ts  justfile  package.json  rsbuild.config.ts  tsconfig.json
.github/workflows/: release.yml
src/: App.vue  env.d.ts  index.css  index.ts  util.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: assistant.rs  conversation.rs  knowledge_base.rs  mod.rs  ollama.rs  setting.rs
src-tauri/src/dbaccess/: assistant.rs  conversation.rs  embed.rs  knowledge_base.rs  mod.rs
src-tauri/src/entities/: app_state.rs  assistant.rs  conversation.rs  mod.rs
src-tauri/src/models/: app_state.rs  assistant.rs  conversation.rs  knowledge_base.rs  mod.rs
src-tauri/src/utils/: mod.rs  parse_file.rs  path.rs  setting.rs  window.rs
src/components/: AppHeader.vue  AppSider.vue  MarkdownRender.vue  SideItem.vue
src/layouts/: AppContent.vue  AppHeader.vue  AppSider.vue
src/locales/: en.json  en_US.json  index.ts  zh_CN.json
src/models/: assistant.ts  conversation.ts  knowledge_base.ts  model.ts
src/plugins/: i18n.ts  markdown.ts  pinia.ts  router.ts
src/router/: index.ts
src/store/: ui.ts
src/stores/: app.ts  chat.ts  knowledge_base.ts  ui.ts
src/views/: Chat.vue  File.vue  Setting.vue
src/views/Chat/: Chat.vue  ChatContent.vue  ChatSider.vue
src/views/KnowledgeBase/: KnowledgeBase.vue  (+2 more)
架构图及流程图/: RAG流程图.drawio  local mind架构图.drawio  tauri架构图.drawio  上传文档生成知识库流程图.drawio  应用数据流.drawio
(+1 files in other folders)
