[package]
name = "local-mind"
version = "0.1.0"
authors = ["CakeAL"]
edition = "2021"
description = "A Tauri App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_mind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = "0.4"
ollama-rust-api = { git = "https://github.com/CakeAL/ollama-rust-api" }
reqwest = { version = "0.12", features = ["stream"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-decorum = { git = "https://github.com/CakeAL/tauri-plugin-decorum" }
tauri-plugin-shell = "2.2.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.16.0", features = ["v4"] }
window-vibrancy = "0.6.0"
